--- a/css/site.css
+++ b/css/site.css
@@ -42,4 +42,9 @@ body { padding-top: 20px;padding-bottom: 10px;}
 /* Custom Style Definitions */
 .download_svg {visibility:hidden;display: none;}
 
+.embedded_svg:-webkit-full-screen {
+  width: 100%;
+  height: 100%;
+}
+
 }
