--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 /* colours: #9D9DA8 = orange; #3C3C45 = dark violet; #438336 = dark green; */
 
-body { padding-top: 20px;padding-bottom: 10px;}
+body { padding-top: 20px;padding-bottom: 0px;background:#3C3C45;}
 
 .btn-outline{color:#9D9DA8;background-color:transparent;border-color:#9D9DA8}
 .btn-outline:hover,
@@ -18,19 +18,20 @@ body { padding-top: 20px;padding-bottom: 10px;}
 .bs-docs-booticon-outline{background-color:transparent;border:1px solid #fff}
 
 
-.bs-docs-nav .navbar-brand,.bs-docs-nav .navbar-nav>li>a{font-weight:600;color:#3C3C45}
+.bs-docs-nav .navbar-brand,.bs-docs-nav .navbar-nav>li>a{font-weight:600;color:#ffffff}
 .bs-docs-nav .navbar-nav>li>a:hover,.bs-docs-nav .navbar-nav>.active>a,
 .bs-docs-nav .navbar-nav>.active>a:hover{color:#9D9DA8;background-color:#fff}
 .bs-docs-nav .navbar-toggle .icon-bar{background-color:#3C3C45}
 .bs-docs-nav .navbar-header .navbar-toggle{border-color:#fff}.bs-docs-nav .navbar-header .navbar-toggle:hover,
 .bs-docs-nav .navbar-header .navbar-toggle:focus{background-color:#f9f9f9;border-color:#fff}
 
-.navbar { margin-bottom: 10px;}
+.navbar { margin-bottom: 10px; background: #9D9DA8;}
 .bs-docs-masthead { background: #9D9DA8;}
 .list-group {color:#3C3C45;}
 .list-description {font-size:14px;}
+.list-group-item a {text-decoration:none; color:#3C3C45; }
 
-.bs-docs-header {background: #9D9DA8; color: #FFFFFF;}
+.bs-docs-header {background: #3C3C45; color: #FFFFFF;}
 .bs-docs-footer{padding-top:40px;padding-bottom:40px;margin-top:100px;color:#cccccc;text-align:center;border-top:1px solid #e5e5e5; background-color:#3C3C45;}
 .bs-docs-footer-links{padding-left:0;margin-top:20px;color:#cccccc}.bs-docs-footer-links li{display:inline;padding:0 2px}
 .bs-docs-footer-links li:first-child{padding-left:0}@media (min-width:768px){.bs-docs-footer p{margin-bottom:0}}
@@ -41,10 +42,12 @@ body { padding-top: 20px;padding-bottom: 10px;}
 
 /* Custom Style Definitions */
 .download_svg {visibility:hidden;display: none;}
+.btn-default {background-color:transparent;color:#ffffff;}
+.h_white {color:#ffffff;}
+.desc {color:#cccccc;}
+.link a {color:#cccccc; font-weight:bold}
+.navbar .btn-toolbar { margin-top: 0; margin-bottom: 0 }
+.embedded_svg:-webkit-full-screen {width: 100%; height: 100%;}
+.code {background:#000000;color:#ffffff}
+.txt {font-size:18px; color:#cccccc;}
 
-.embedded_svg:-webkit-full-screen {
-  width: 100%;
-  height: 100%;
-}
-
-}
