--- a/css/site.css
+++ b/css/site.css
@@ -25,7 +25,7 @@ body { padding-top: 20px;padding-bottom: 0px;background:#3B3D4A;}
 .bs-docs-nav .navbar-header .navbar-toggle{border-color:#fff}.bs-docs-nav .navbar-header .navbar-toggle:hover,
 .bs-docs-nav .navbar-header .navbar-toggle:focus{background-color:#f9f9f9;border-color:#fff}
 
-.navbar { margin-bottom: 10px; background: #5B5D6E;}
+.navbar { margin-bottom: 10px; background: #9D9DA8;}
 .bs-docs-masthead { background: #9D9DA8;}
 .list-group {color:#3C3C45;}
 .list-description {font-size:14px;}
